# applockgui

./: README.md  meson.build  org.example.App.json
.flatpak/repo/: metadata
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: actionrow.blp  actionrow.py  applistpage.blp  applistpage.py  config.py  gnome-app.in  gnome_app.gresource.xml  main.py  meson.build  settingspage.blp  settingspage.py  statuspage.blp  statuspage.py  styles.css  window.blp  window.py  window.ui
